effects/kscreen: don't stop effect when fade out animation is done

The screen needs to stay black until it gets enabled again, otherwise
slight timing differences can cause the screen to turn on full brightness
again immediately before turning off.

BUG: 460902
(cherry picked from commit f6d14f1b44024af910718c6d5b4e29939914e871)